--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "homepage": "https://github.com/semihberkayozturk/socketio-demo#readme",
     "dependencies": {
         "express": "^4.18.2",
+        "nodemon": "^2.0.20",
         "socket.io": "^4.5.4"
     }
 }
